// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render in dark skin 1`] = `
<label
  class="label"
>
  <span
    class="switch radio dark"
  >
    <input
      type="radio"
    />
    <span />
  </span>
</label>
`;

exports[`The component should render in disabled state 1`] = `
<label
  class="label disabled"
>
  <span
    class="switch disabled radio dark disabled"
  >
    <input
      disabled=""
      type="radio"
    />
    <span />
  </span>
</label>
`;

exports[`The component should render in light skin 1`] = `
<label
  class="label"
>
  <span
    class="switch radio light"
  >
    <input
      type="radio"
    />
    <span />
  </span>
</label>
`;
